--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".tabbar">
-
+        <activity
+                android:name=".tabbar"
+                android:label="@string/title_activity_tabbar">
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
