练习到70课时

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
                 android:name=".tabbar"
                 android:label="@string/title_activity_tabbar">
         </activity>
-        <activity android:name=".we_sub" android:label="@string/we_sub_name">
+        <activity android:name=".we_sub"
+                  android:configChanges="orientation|screenSize"
+                  android:label="@string/we_sub_name">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value=".MainActivity"/>
