--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value=".MainActivity"/>
         </activity>
+        <activity android:name=".we_sub_activity_on_off_second"></activity>
+        <activity android:name=".we_sub_activity_life_cycle_second"></activity>
     </application>
 
 </manifest>
