--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
                 <data android:scheme="tencent222222" />
             </intent-filter>
         </activity>
+        <activity android:name="com.tencent.connect.common.AssistActivity"
+                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+        />
         <activity android:name=".we_sub_activity_transmit_second"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
