--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,35 +1,32 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.application'// 声明这个是应用程序模块，'con.android.library'表示这是库模块，库模块需要依附引用程序模块才能运行
 
-apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android'//kotlin开发Android，必须要有这个插件
 
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android-extensions'//kotlin扩展功能插件，可以便利的使用kotlin来开发Android
 
 android {
-    compileSdkVersion 29
-    defaultConfig {
-        applicationId "com.chenyuwulu.ViewComic"
-        minSdkVersion 19
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables.useSupportLibrary = true
+    compileSdkVersion 29//指定项目编译Android版本
+    defaultConfig {//项目细节配置
+        applicationId "com.chenyuwulu.ViewComic"//项目的唯一标识符
+        minSdkVersion 19//支持的最低Android版本号
+        targetSdkVersion 29//已做过最低测试的版本号，比如我这里是Android 10的版本号，所以当项目跑在Android 9的系统下时，不会自动启用Android 10的新增特性
+        versionCode 1 //当前版本号
+        versionName "1.0"//当前版本号名称
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"//启用JUnit测试，可以为当前项目编写测试例子。
+        vectorDrawables.useSupportLibrary = true//支持矢量图片的扩展包
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    buildTypes {//生成安装包的配置，通常两个配置，一个debug，一个release
+        release {//正式版本
+            minifyEnabled false//是否对项目代码进行混淆
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'//指定混淆时用的规则文件
+            //proguard-android-optimize.txt文件是在sdk目录/tools/proguard目录下的，属于通用混淆规则
+            //proguard-rules.pro是当前项目根目录下，可以自己手动编写混淆规则
         }
     }
-    compileOptions {
-        sourceCompatibility = kotlin_version
-        targetCompatibility = kotlin_version
-    }
-    buildToolsVersion = '29.0.3'
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+dependencies {//指定当前项目的所有依赖关系
+    implementation fileTree(dir: 'libs', include: ['*.jar'])//添加本地名为libs目录下，后缀为jar的包为依赖
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
