--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="com.chenyuwulu.ViewComic.MainActivity"/>
         </activity>
-        <activity
-                android:name="com.tencent.tauth.AuthActivity"
+        <activity android:name="com.tencent.tauth.AuthActivity"
                 android:noHistory="true"
                 android:launchMode="singleTask" >
             <intent-filter>
@@ -35,8 +34,7 @@
                 <data android:scheme="tencent1109647204" />
             </intent-filter>
         </activity>
-        <activity
-                android:name="com.tencent.connect.common.AssistActivity"
+        <activity android:name="com.tencent.connect.common.AssistActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:screenOrientation="behind"
                 android:theme="@android:style/Theme.Translucent.NoTitleBar" />
@@ -44,7 +42,6 @@
         <activity android:name="com.chenyuwulu.ViewComic.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
