--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
-    ext.anko_version = '0.10.8'
-    repositories {
+    ext.kotlin_version = '1.3.71'//kotlin的版本号
+    ext.anko_version = '0.10.8'//anko版本号
+    repositories { //引入扩展组件依赖库
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
@@ -11,8 +11,8 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:3.6.2'//当前Android项目和gradle项目匹配的版本号
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"//用kotlin开发的项目需要引入对应版本的插件
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
