--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" tools:ignore="ProtectedPermissions" />
     <application
             android:allowBackup="true"
-            android:icon="@drawable/bh3"
+            android:icon="@drawable/logo"
             android:label="@string/app_name"
             android:roundIcon="@drawable/manhua"
             android:supportsRtl="true"
