修补至Android事件

--- a/chenyu_demo/src/main/AndroidManifest.xml
+++ b/chenyu_demo/src/main/AndroidManifest.xml
@@ -73,6 +73,54 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
+        <!--        布局重心演示页面-->
+        <activity android:name=".Course_9">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!--        内外边距演示页面-->
+        <activity android:name=".Course_10">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!--        相对布局演示页面-->
+        <activity android:name=".Course_11">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!--        表格布局演示页面-->
+        <activity android:name=".Course_12">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!--       帧布局演示页面-->
+        <activity android:name=".Course_13">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!--       绝对布局演示页面-->
+        <activity android:name=".Course_14">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!--       网格布局演示页面-->
+        <activity android:name=".Course_15">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <!--       Android事件演示页面-->
+        <activity android:name=".Course_16">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
