--- a/chenyu_demo/src/main/AndroidManifest.xml
+++ b/chenyu_demo/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/manhua"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
         <!--        主界面的activity-->
         <activity android:name=".MainActivity">
